# mvg-cli

./: Cargo.toml  README.md
mvg-api/: Cargo.toml
mvg-api/src/: departures.rs  notifications.rs  routes.rs  station.rs
src/: colorize.rs  main.rs
