[package]
name = "mvg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mvg"
path = "src/main.rs"

[workspace]
members = ["mvg-api"]

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
html2text = "0.6.0"
mvg-api = { path = "./mvg-api" }
nu-ansi-term = "0.49.0"
open = "5.0.0"
spinners = "4.1.0"
tabled = { version = "0.13.0", features = ["color"] }
terminal_size = "0.2.6"
tokio = { version = "1.29.1", features = ["full"] }
