[package]
name = "mvg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mvg"
path = "src/main.rs"

[workspace]
members = ["mvg-api"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.26"
clap = { version = "4.5.29", features = ["derive"] }
html2text = "0.6.0"
mvg-api = { path = "./mvg-api" }
nu-ansi-term = "0.50.1"
open = "5.3.2"
spinners = "4.1.1"
tabled = { version = "0.18.0", features = ["ansi"] }
terminal_size = "0.4.1"
tokio = { version = "1.43.0", features = ["full"] }
