[package]
name = "mvg-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_with = { version = "3.1.0", features = ["chrono"] }
